# portal

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_fonts.sh  conf.sh  fetch-deps.sh  partitions.csv  sdkconfig.defaults  sdkconfig.heap  sdkconfig.release
apps/gesture-demo/: build.zig  build.zig.zon
apps/gesture-demo/src/: main.zig
apps/launcher/: AGENTS.md  README.md  build.zig  build.zig.zon
apps/launcher/docs/: spec-app-packaging.md  spec-main-interface.md  spec-web-configuration.md
apps/launcher/src/: controller.zig  main.zig
apps/launcher/src/apps/: catalog.zig  controller.zig  installer.zig  manifest.zig  paths.zig  signing.zig  zip_reader.zig
apps/launcher/src/assets/: icon-settings.af  main-header.af
apps/microtask-demo/: build.zig  build.zig.zon
apps/microtask-demo/src/: main.zig
apps/settings/: README.md  build.zig  build.zig.zon
apps/settings/src/: main.zig
apps/tls-echo-server/: README.md  build.zig  build.zig.zon
apps/tls-echo-server/src/: main.zig
docs/: app-manifest.example.json  app-manifest.schema.json  config.example.json  config.schema.json
docs/plans/: execplan-fastepd-vlw-parity.md  execplan-gesture-detection-api.md  execplan-internet-app-installation.md  execplan-microtasks-zig-sdk.md  execplan-tls-socket-server.md  execplan-wake-unlock-swipe.md
docs/specs/: VLW_Font_Format_Specification.md  spec-app-packaging.md  spec-development-mode.md  spec-display-driver-parity.md  spec-gesture-recognition.md  spec-main-interface.md  spec-microtasks.md  spec-power-management.md  spec-settings.md  spec-socket-tls.md  spec-ui-toolkit.md
main/: CMakeLists.txt  idf_component.yml  m5papers3_display.cpp  m5papers3_display.h  main.cpp  sd_card.cpp  sd_card.h
main/assets/: entrypoint.wasm  inter-medium-32.bbf  inter_medium_10.bbf  inter_medium_11.bbf  inter_medium_12.bbf  inter_medium_13.bbf  inter_medium_14.bbf  inter_medium_15.bbf  inter_medium_16.bbf  inter_medium_18.bbf  inter_medium_20.bbf  inter_medium_22.bbf  inter_medium_24.bbf  inter_medium_26.bbf  inter_medium_28.bbf  inter_medium_30.bbf  inter_medium_32.bbf  inter_medium_32.vlw  inter_medium_8.bbf  inter_medium_9.bbf  montserrat_light_20.vlw  settings.wasm  sleepimage.af  wakeimage.af
main/fonts/: vlw_font.cpp  vlw_font.h  vlw_registry.cpp  vlw_registry.h  vlw_renderer_fastepd.cpp  vlw_renderer_fastepd.h
main/host/: event_loop.cpp  event_loop.h  events.h  httpd_host.h  microtask_scheduler.cpp  microtask_scheduler.h
main/input/: gesture_engine.cpp  gesture_engine.h  touch_tracker.cpp  touch_tracker.h
main/other/: fastepd_xtc.cpp  fastepd_xtc.h  fastepd_xtc_utils.h  lgfx_xtc.cpp  lgfx_xtc.h  lovyangfx_xtc.cpp  lovyangfx_xtc.h  mem_utils.cpp  mem_utils.h  xteink_image_utils.cpp  xteink_image_utils.h
main/services/: devserver_service.cpp  devserver_service.h  power_service.cpp  power_service.h  settings_service.cpp  settings_service.h  wifi_service.cpp  wifi_service.h
main/wasm/: api.h  app_contract.h  wasm_controller.cpp  wasm_controller.h  wasm_controller_dispatch.cpp  wasm_controller_globals.cpp  wasm_controller_instance.cpp  wasm_controller_load.cpp  wasm_controller_memory.cpp  wasm_controller_runtime.cpp
main/wasm/api/: core.cpp  devserver.cpp  display.cpp  display.h  display_fastepd.cpp  display_fastepd.h  display_fastepd_arc.cpp  display_fastepd_arc.h  display_images.cpp  display_lgfx.cpp  display_lgfx.h  display_none.h  display_primitives.cpp  display_text.cpp  display_unspecified.h  errors.h  fast_epd.cpp  features.h  fs.cpp  gesture.cpp  hal.cpp  http.cpp  httpd.cpp  i2c_bus.cpp  i2c_bus.h  imu.cpp  log.cpp  m5.cpp  marshalling.h  microtask.cpp  net.cpp  nvs.cpp  power.cpp  rtc.cpp  socket.cpp  socket_tls.cpp  speaker.cpp  touch.cpp
patches/: FastEPD.patch  lovyangfx.patch  wamr.patch
patches/LovyanGFX/: Panel_EPD.cpp
(+3 files in other folders)
